--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image" href="/images/Icon.jpeg">
+    <link rel="Icon" type="image" href="/Project-1/makeshift-top-3565/image/Icon.jpeg">
     <title img> im The #1 Freelance Product Suite </title>
 </head>
 <style>
@@ -591,7 +591,7 @@ color: #4c4d5f;
             <ul>
                 <li><a href="#">Product </a></li>
                 <li><a href="#">Templates</a></li>
-                <li><a href="#">Pricing</a></li>
+                <li><a href="/Project-1/makeshift-top-3565/PricingPage.html">Pricing</a></li>
                 <li><a href="#">Reviews</a></li>
             </ul>
         </div>
@@ -603,7 +603,7 @@ color: #4c4d5f;
 
     </div>
     <div class="back-image">
-        <img src="/images/background-back.png" alt="">
+        <img src="/Project-1/makeshift-top-3565/image/background-back.png" alt="">
     </div>
     <div class="container-1">
         <div class="child-1">
