--- a/Index.html
+++ b/Index.html
@@ -597,13 +597,13 @@ color: #4c4d5f;
         </div>
         
         <div class="login">
-            <a href="">LOGIN</a>
+            <a href="/makeshift-top-3565/Login.html">LOGIN</a>
             <a href="">START FREE</a>
         </div>
 
     </div>
     <div class="back-image">
-        <img src="/Project-1/makeshift-top-3565/image/background-back.png" alt="">
+        <img src="/makeshift-top-3565/image/background-back.png" alt="">
     </div>
     <div class="container-1">
         <div class="child-1">
