completed my signup page

--- a/Index.html
+++ b/Index.html
@@ -591,14 +591,14 @@ color: #4c4d5f;
             <ul>
                 <li><a href="#">Product </a></li>
                 <li><a href="#">Templates</a></li>
-                <li><a href="/Project-1/makeshift-top-3565/PricingPage.html">Pricing</a></li>
+                <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
                 <li><a href="#">Reviews</a></li>
             </ul>
         </div>
         
         <div class="login">
             <a href="/makeshift-top-3565/Login.html">LOGIN</a>
-            <a href="">START FREE</a>
+            <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
         </div>
 
     </div>
