--- a/Index.html
+++ b/Index.html
@@ -615,7 +615,7 @@ color: #4c4d5f;
             <div ><p class="child-1-para">Manage your hours with ease with an all-in-one time tracker, timesheets and billing system.</p></div>
             <div class="child-1-input">
                 <input type="text" placeholder="Enter Your Email">
-                <a href="Google.com" class="startfree-btn">START FREE</a>
+                <a href="/makeshift-top-3565/SigupPage.html" class="startfree-btn">START FREE</a>
             </div>
         </div>
 
@@ -716,7 +716,7 @@ color: #4c4d5f;
             <h2>Simplify your workflow with Bonsai time tracking.</h2>
          </div>
          <div>
-            <a href="#">SART FREE</a>
+            <a href="/makeshift-top-3565/SigupPage.html">SART FREE</a>
          </div>
     </div>
     <div class="container-7">
