--- a/Login.html
+++ b/Login.html
@@ -302,8 +302,8 @@
       </div>
 
       <div class="login">
-        <a href="">Login</a>
-        <a href="">Sign up</a>
+        <a href="/makeshift-top-3565/Login.html">Login</a>
+        <a href="/makeshift-top-3565/SigupPage.html">Sign up</a>
       </div>
     </div>
 
