--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image" href="/Project-1/makeshift-top-3565/image/Icon.jpeg">
-    <title img> im The #1 Freelance Product Suite </title>
+    <link rel="Icon" type="image" href="/makeshift-top-3565/image/Icon.jpeg">
+    <title> Freelance Time Tracking - Bonsai</title>
 </head>
 <style>
     *{
@@ -592,7 +592,7 @@ color: #4c4d5f;
                 <li><a href="#">Product </a></li>
                 <li><a href="#">Templates</a></li>
                 <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
-                <li><a href="#">Reviews</a></li>
+                <li><a href="/makeshift-top-3565/Reviews.html">Reviews</a></li>
             </ul>
         </div>
         
