--- a/SigupPage.html
+++ b/SigupPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image" href="/makeshift-top-3565/image/Icon.jpeg">
     <title>Sign Up - Bonsai</title>
 </head>
 <style>
