about page added

--- a/SigupPage.html
+++ b/SigupPage.html
@@ -407,7 +407,7 @@
         <ul>
           <li><a href="#">Contact Us </a></li>
           <li><a href="#"> Help Center </a></li>
-          <li><a href="#"> About Us </a></li>
+          <li><a href="/makeshift-top-3565/about.html"> About Us </a></li>
           <li><a href="#"> Plans & Pricing </a></li>
           <li><a href="#"> Privacy policy</a></li>
         </ul>
