--- a/Index.html
+++ b/Index.html
@@ -934,7 +934,7 @@ color: #4c4d5f;
         <div class="footer-child">
             <div class="footer-heading">BONSAI</div>
             <div class="footer-link">
-                <a href="#">About</a>
+                <a href="/makeshift-top-3565/about.html">About</a>
                 <a href="#">Careers</a>
                 <a href="#">Support</a>
                 <a href="#"> LinkedIn</a>
