--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image" href="/makeshift-top-3565/image/Icon.jpeg">
+    <link rel="Icon" type="image" href="https://i.ibb.co/qDLR4Vf/Icon.jpg">
     <title> Freelance Time Tracking - Bonsai</title>
 </head>
 <style>
@@ -632,7 +632,7 @@ color: #4c4d5f;
 
 <!-- END NAVBAR -->
     <div class="back-image">
-        <img src="/makeshift-top-3565/image/background-back.png" alt="">
+        <img src="https://i.ibb.co/5nLp59w/background-back.png" alt="background-back" border="0">
     </div>
     <div class="container-1">
         <div class="child-1">
