--- a/PricingPage.html
+++ b/PricingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image" href="/makeshift-top-3565/image/Icon.jpeg">
+    <link rel="Icon" type="image" href="https://i.ibb.co/pnnyM2D/Icon.jpg">
     <title img> im The #1 Freelance Product Suite - Bonsai</title>
 </head>
 <style>
@@ -667,7 +667,7 @@ color: #4c4d5f;
 <!-- END NAVBAR -->
     
     <div class="back-image">
-       <img src="/makeshift-top-3565/image/pricingPage_back.png" alt="">
+        <img src="https://i.ibb.co/MpfzHZ0/pricing-Page-back.png" alt="pricing-Page-back" border="0">
     </div>
 
     <!-- END-------background image -->
