--- a/Reviews.html
+++ b/Reviews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image" href="/makeshift-top-3565/image/Icon.jpeg">
+    <link rel="Icon" type="image" href="https://i.ibb.co/pnnyM2D/Icon.jpg">
     <title>Bonsai Reviews - Trusted by 150,000+ Freelancers</title>
 </head>
 <style>
