--- a/Reviews.html
+++ b/Reviews.html
@@ -113,7 +113,7 @@
     #heading-container{
         border: 1px solid #fff;
         height: 390px;
-        width: 33%;
+        width: 34%;
         margin: auto;
        /* bottom: -200px; */
     }
@@ -175,8 +175,8 @@
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(15,auto);
         gap: 20px;
-        position: absolute;
-        top: 500px;
+        position: relative;
+    bottom: 110px;
         margin-left: 2.5%;
         margin-right: 2.5%;
 
@@ -188,6 +188,7 @@
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         
     }
+   
     .para{
         font-size: 22px;
     line-height: 1.4;
@@ -211,7 +212,7 @@
     .inner-box{
         margin-right: 30px;
     margin-left: 36px;
-    padding-top: 175px;
+    padding-top: 115px;
     /* padding-bottom: 74px; */
     }
     .name:nth-child(1){
@@ -226,12 +227,11 @@
     height: 650px;
     width: 70%;
     margin: auto;
-    margin-top: 598%;
+    /* margin-top: 598%; */
     display: grid;
     grid-template-columns: repeat(3,39% 40% 27%);
     margin-bottom: 120px;
     font-family: 'Proximanova opt',sans-serif;
-    position: sticky;
 }
 
 .footer-heading{
