--- a/Index.html
+++ b/Index.html
@@ -163,7 +163,7 @@
       width: 100%;
       height: 800px;
       position: absolute;
-      bottom: -80px;
+      top: 80px;
       display: flex;
       
      
