--- a/PricingPage.html
+++ b/PricingPage.html
@@ -196,8 +196,8 @@ input:checked + .slider:before {
      /* border: 3px solid rgb(0, 4, 255); */
       width: 100%;
       height: 119px;
-      position: absolute;
-      bottom: 450px; 
+      position: absolute;  
+      top: 216px;
       display: flex;  
       align-items: center;
       justify-content: center;
@@ -242,7 +242,7 @@ input:checked + .slider:before {
     height: auto;
     width: 80%;
     position: absolute;
-    bottom: -570px;
+    top: 360px;
     margin-left: 10%;
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -361,9 +361,9 @@ input:checked + .slider:before {
     
  } */
 #mid-heading{
-    margin-top: 650px;
+    margin-top: 600px;
     text-align: center;
-    position: sticky;
+    
     font-weight: 400;
     font-size: 2rem;
     line-height: 140%;
