--- a/Login.html
+++ b/Login.html
@@ -303,8 +303,8 @@
       </div>
 
       <div class="login">
-        <a href="/makeshift-top-3565/Login.html">Login</a>
-        <a href="/makeshift-top-3565/SigupPage.html">Sign up</a>
+        <a href="Login.html">Login</a>
+        <a href="SigupPage.html">Sign up</a>
       </div>
     </div>
 
