--- a/PricingPage.html
+++ b/PricingPage.html
@@ -652,14 +652,14 @@ color: #4c4d5f;
         <ul>
             <li><a href="#">Product <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
             <li><a href="#">Templates <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
-            <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
-            <li><a href="/makeshift-top-3565/Reviews.html">Reviews</a></li>
+            <li><a href="PricingPage.html">Pricing</a></li>
+            <li><a href="Reviews.html">Reviews</a></li>
         </ul>
     </div>
     
     <div class="login">
-        <a href="/makeshift-top-3565/Login.html">LOGIN</a>
-        <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+        <a href="Login.html">LOGIN</a>
+        <a href="SigupPage.html">START FREE</a>
     </div>
     
 </div>
@@ -793,7 +793,7 @@ color: #4c4d5f;
                 </div>
 
                 <div class="btn" id="btn-2">
-                    <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+                    <a href="SigupPage.html">START FREE</a>
                 </div>
          </div>
          <div class="container-1-child">
@@ -848,7 +848,7 @@ color: #4c4d5f;
                 </div>
 
                 <div class="btn">
-                    <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+                    <a href="SigupPage.html">START FREE</a>
                 </div>
          </div>
     </div>
@@ -917,7 +917,7 @@ color: #4c4d5f;
         </div>
         <div id="container-3-child-2">
               <div >
-                <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+                <a href="SigupPage.html">START FREE</a>
               </div>
         </div>
     </div>
@@ -1098,7 +1098,7 @@ color: #4c4d5f;
         <div class="footer-child">
             <div class="footer-heading">BONSAI</div>
             <div class="footer-link">
-                <a href="/makeshift-top-3565/about.html">About</a>
+                <a href="page_about.html">About</a>
                 <a href="#">Careers</a>
                 <a href="#">Support</a>
                 <a href="#"> LinkedIn</a>
