--- a/SigupPage.html
+++ b/SigupPage.html
@@ -393,7 +393,7 @@
           </div>
 
           <div id="log-in-btn">
-            <a href="">Log In</a>
+            <a href="Login.html">Log In</a>
            </div>
           
         </div>
