--- a/Index.html
+++ b/Index.html
@@ -618,14 +618,14 @@ color: #4c4d5f;
         <ul>
             <li><a href="#">Product <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
             <li><a href="#">Templates <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
-            <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
-            <li><a href="/makeshift-top-3565/Reviews.html">Reviews</a></li>
+            <li><a href="PricingPage.html">Pricing</a></li>
+            <li><a href="Reviews.html">Reviews</a></li>
         </ul>
     </div>
     
     <div class="login">
-        <a href="/makeshift-top-3565/Login.html">LOGIN</a>
-        <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+        <a href="Login.html">LOGIN</a>
+        <a href="SigupPage.html">START FREE</a>
     </div>
     
 </div>
@@ -644,7 +644,7 @@ color: #4c4d5f;
             <div ><p class="child-1-para">Manage your hours with ease with an all-in-one time tracker, timesheets and billing system.</p></div>
             <div class="child-1-input">
                 <input type="text" placeholder="Enter Your Email">
-                <a href="/makeshift-top-3565/SigupPage.html" class="startfree-btn">START FREE</a>
+                <a href="SigupPage.html" class="startfree-btn">START FREE</a>
             </div>
         </div>
 
@@ -934,7 +934,7 @@ color: #4c4d5f;
         <div class="footer-child">
             <div class="footer-heading">BONSAI</div>
             <div class="footer-link">
-                <a href="/makeshift-top-3565/about.html">About</a>
+                <a href="/page_about.html">About</a>
                 <a href="#">Careers</a>
                 <a href="#">Support</a>
                 <a href="#"> LinkedIn</a>
