--- a/Reviews.html
+++ b/Reviews.html
@@ -334,8 +334,8 @@ color: #4c4d5f;
         </div>
         
         <div class="login">
-            <a href="/makeshift-top-3565/Login.html">LOGIN</a>
-            <a href="/makeshift-top-3565/SigupPage.html">START FREE</a>
+            <a href="Login.html">LOGIN</a>
+            <a href="SigupPage.html">START FREE</a>
         </div>
         
     </div>
@@ -922,7 +922,7 @@ color: #4c4d5f;
     <div class="footer-child">
         <div class="footer-heading">BONSAI</div>
         <div class="footer-link">
-            <a href="/makeshift-top-3565/about.html">About</a>
+            <a href="page_about.html">About</a>
             <a href="#">Careers</a>
             <a href="#">Support</a>
             <a href="#"> LinkedIn</a>
