--- a/page_about.html
+++ b/page_about.html
@@ -312,8 +312,8 @@ color: #4c4d5f;
         <ul>
             <li><a href="#">Product <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
             <li><a href="#">Templates <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
-            <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
-            <li><a href="/makeshift-top-3565/Reviews.html">Reviews</a></li>
+            <li><a href="PricingPage.html">Pricing</a></li>
+            <li><a href="Reviews.html">Reviews</a></li>
         </ul>
     </div>
     
