--- a/Reviews.html
+++ b/Reviews.html
@@ -93,11 +93,12 @@
     }
     .login>a:nth-child(1){
         color:#00b289;
-        border: 1px solid #00b289;;
+        border: 1px solid #00b289;
     }
     .login>a:nth-child(2){
         color:#f9fbfb;
-        background-color: #00b289;;
+        background-color: #00b289;
+        width: 90px;
     }
     .login>a:nth-child(1):hover{
         background-color: #00b289;
@@ -328,7 +329,7 @@ color: #4c4d5f;
             <ul>
                 <li><a href="#">Product <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
                 <li><a href="#">Templates <img class="down-arr" src="https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5f5a14486154c507c79e758f_001-down-chevron.svg" alt=""> </a></li>
-                <li><a href="/makeshift-top-3565/PricingPage.html">Pricing</a></li>
+                <li><a href="PricingPage.html">Pricing</a></li>
                 <li><a href="#">Reviews</a></li>
             </ul>
         </div>
