--- a/SigupPage.html
+++ b/SigupPage.html
@@ -23,7 +23,7 @@
     width: 58%;
     margin: auto;
     position: absolute;
-    bottom: -140px;
+    top: 60px;
     margin-left: 21%;
     background-color: white;
     border-radius: 10px;
