--- a/Login.html
+++ b/Login.html
@@ -43,7 +43,7 @@
       gap: 18px;
     }
     .login a {
-      margin-left: 15px;
+      margin-left: 3px;
       text-decoration: none;
       /* padding: 12px 27px 9px; */
       color: #6d6d6d;
@@ -110,7 +110,7 @@
     }
     #line-p > p {
       position: absolute;
-      bottom: 397px;
+      top: 367px;
       left: 65%;
       background-color: white;
       padding: 2px 10px;
