--- a/PricingPage.html
+++ b/PricingPage.html
@@ -161,11 +161,12 @@ input:checked + .slider:before {
     }
     .login>a:nth-child(1){
         color:#00b289;
-        border: 1px solid #00b289;;
+        border: 1px solid #00b289;
     }
     .login>a:nth-child(2){
         color:#f9fbfb;
-        background-color: #00b289;;
+        background-color: #00b289;
+        width: 133px;
     }
     .login>a:nth-child(1):hover{
         background-color: #00b289;
