--- a/page_about.html
+++ b/page_about.html
@@ -99,7 +99,8 @@
     }
     .login>a:nth-child(2){
         color:#f9fbfb;
-        background-color: #00b289;;
+        background-color: #00b289;
+        width: 133px;
     }
     .login>a:nth-child(1):hover{
         background-color: #00b289;
